--- a/formulir.html
+++ b/formulir.html
@@ -31,6 +31,7 @@
 	.tabel1 {
 		margin:auto;
 		margin-bottom:10px;
+		border: 3px solid navy;
 	}
   </style>
 </head>
@@ -83,6 +84,11 @@
 			<option value="I"> I</option>
 			<input type="text" name="nama" style="width:80px" placeholder="1A" ng-model="kursi"></td>
 			</tr>
+			<tr>
+			<td></td>
+			<td><img src="21cineplex-logo3.png" class="img-rounded" alt="Cinque Terre" width="300px" height="150px">
+			</td>
+			</tr>
 			</tbody>
 			</table> 
 			</td>
@@ -117,6 +123,11 @@
 			</tr>
 			<tr>
 			<td>Harga <td> : <td>Rp {{jumlah*30000}} ,00</td>
+			</tr>
+			<tr>
+			<td></td>
+			<td><img src="21cineplex-logo3.png" class="img-rounded" alt="Cinque Terre" width="300px" height="150px">
+			</td>
 			</tr>
 			</table> 
 			<br>
