--- a/formulir.html
+++ b/formulir.html
@@ -44,7 +44,7 @@
             <table class="tabel1">
 			<tr>
 			<td>
-            <table class="table table-bordered " style="width:450px; height:600px; ">
+            <table class="table table-striped " style="width:450px; height:600px; ">
 			<thead>
 			</thead>
 			<tbody>
